ADD: Manifest shortcuts + CHG: serviceworker now fetch-first instead of cache-first

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,5 +10,20 @@
       "src": "icon.png",
       "sizes": "512x512",
       "type": "image/png"
-    }]
+    }],
+    "shortcuts": [
+        {
+            "name": "About",
+            "description": "Info diesdas",
+            "url": "./about.html",
+            "icons": [
+                {
+                    "src": "./icon.png",
+                    "sizes": "512x512",
+                    "type": "image/png",
+                    "purpose": "any"
+                }
+            ]
+        }
+    ]
   }
